добавил метод img2batch тк не хватает памяти для картинок разрешением 2048x2048

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 
 Trans:
-  data_path: d:\Code\KD_DATA
+  data_path: C:\Code\KD_PRACT\KD_DATA
 Segmentation:
-  img_path: d:\Code\KD_DATA\Segm\your_dataset
-  label_path: d:\Code\KD_DATA\Segm\your_dataset_result
-  weights_path: 'd:\Code\KD_Summer_Work\Segmentation\Unet_weights.pth'
+  img_path: C:\Code\KD_PRACT\KD_DATA\Segm\your_dataset
+  label_path: C:\Code\KD_PRACT\KD_DATA\Segm\your_dataset_result
+  weights_path: C:\Code\KD_PRACT\KD_Summer_Work\Segmentation\Unet_weights.pth
